syntax = "proto3";

package pulp_fiction.protos;

option java_package = "co.firstorderlabs.protos.pulpfiction";
option java_outer_classname = "PulpFictionProtos";

import "google/protobuf/timestamp.proto";

enum PostState {
  CREATING = 0;
  CREATED = 1;
  DELETED = 2;
}

enum PostType {
  COMMENT = 0;
  IMAGE = 1;
}

message GetFeedRequest {
  message GetUserFeedRequest {
    int64 user_id = 1;
  }

  message GetGlobalFeedRequest {
  }

  oneof get_feed_request {
    GetUserFeedRequest get_user_feed_request = 1;
    GetGlobalFeedRequest get_global_feed_request = 2;
  }
}

message ImageWithMetadata {
  message ImageMetadata {
    message GpsCoordinates {
      float x = 1;
      float y = 2;
    }

    int64 image_id = 1;
    google.protobuf.Timestamp created_at = 2;
    GpsCoordinates gps_coordinates = 3;
    string image_with_metadata_hash = 4;
  }

  bytes image_as_base64_png = 1;
  string caption = 2;
  ImageMetadata imageMetadata = 3;
}

message GetFeedResponse {
  bool x = 1;
  repeated ImageWithMetadata images_with_metadata = 2;
}

service PulpFiction {
  rpc GetFeed (GetFeedRequest) returns (GetFeedResponse) {}
}
